argocd/applications/traefik/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: traefik
spec:
  basicAuth:
    namespace: traefik
    secret: dashboard-auth
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.mushroomkingdom.io`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
